j'ai mis à jour le planningController et la documentation
